--- a/manifest.json
+++ b/manifest.json
@@ -5,14 +5,14 @@
   "permissions": ["scripting", "activeTab"],
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": ["https://*.blsspainmorocco.net/*"],
       "js": ["content.js"]
     }
   ],
   "web_accessible_resources": [
     {
       "resources": ["ui/*"],
-      "matches": ["<all_urls>"]
+      "matches": ["https://*.blsspainmorocco.net/*"]
     }
   ]
 }
